Adding specs for design patters, object creation and prototype.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,6 +11,8 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/functionalSpec.js"></script>
+	<script type="text/javascript" src="spec/objectCreationSpec.js"></script>
+	<script type="text/javascript" src="spec/prototypeSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
