--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,6 +13,8 @@
   <script type="text/javascript" src="spec/functionalSpec.js"></script>
 	<script type="text/javascript" src="spec/objectCreationSpec.js"></script>
 	<script type="text/javascript" src="spec/prototypeSpec.js"></script>
+	<script type="text/javascript" src="spec/thisSpec.js"></script>
+	<script type="text/javascript" src="spec/accessControlSpec.js"></script>
 
   <script type="text/javascript">
     (function() {
